# salvo-prisma

./: .gitignore  Cargo.toml  README.md
.github/workflows/: develop.yml  rust.yml
prisma/: schema.prisma
prisma-cli/: Cargo.toml
server/: Cargo.toml
server/src/: main.rs
