[workspace]
members = [
  "prisma-cli",
  "server"
]
resolver = "2"

[workspace.dependencies]
prisma-client-rust = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default-features = false }
prisma-client-rust-cli = { git = "https://github.com/Brendonovich/prisma-client-rust", tag = "0.6.10", default_features = false }

serde = { version = "1.0", features = ["derive"] }
