[package]
name = "prisma-cli"
version = "0.1.0"
edition = "2021"

[features]
postgresql = ["prisma-client-rust-cli/postgresql"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
prisma-client-rust = { workspace = true, features = ["migrations", "postgresql"] }
prisma-client-rust-cli = {  default_features = false, workspace = true, features = ["migrations", "postgresql"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
